# Vins-Fusion

./: .gitignore  README.md  USAGE.md  run.sh  run_local_d435i.sh
config/: fastdds_profile.xml  vins_rviz2.rviz
config/d435i/: d435i_stereo_imu.yaml  left.yaml  right.yaml
config/gz_sim/: cam0_pinhole.yaml  gz_mono_imu.yaml
config/seeker/: cam0_pinhole.yaml  cam1_pinhole.yaml  kalibr_raw_fisheye.yaml  seeker_remap.yaml  seeker_stereo_imu.yaml
docker/: Dockerfile  Dockerfile.jetson
docs/: SEEKER.md  UPSTREAM.md
launch/: vins_d435i.launch.py
models/OakD-VINS/: model.config  model.sdf
models/aws_warehouse/aws_robomaker_warehouse_ClutteringA_01/: model.sdf
models/aws_warehouse/aws_robomaker_warehouse_ClutteringC_01/: model.sdf
models/aws_warehouse/aws_robomaker_warehouse_ClutteringD_01/: model.sdf
models/aws_warehouse/aws_robomaker_warehouse_DeskC_01/: model.sdf
models/aws_warehouse/aws_robomaker_warehouse_GroundB_01/: model.sdf
models/aws_warehouse/aws_robomaker_warehouse_Lamp_01/: model.sdf
models/aws_warehouse/aws_robomaker_warehouse_PalletJackB_01/: model.sdf
models/aws_warehouse/aws_robomaker_warehouse_RoofB_01/: model.sdf
models/aws_warehouse/aws_robomaker_warehouse_ShelfD_01/: model.sdf
models/aws_warehouse/aws_robomaker_warehouse_ShelfE_01/: model.sdf
models/aws_warehouse/aws_robomaker_warehouse_ShelfF_01/: model.sdf
models/aws_warehouse/aws_robomaker_warehouse_TrashCanC_01/: model.sdf
models/aws_warehouse/aws_robomaker_warehouse_WallB_01/: model.sdf
models/x500_depth_vinsfusion/: model.config  model.sdf
patches/: 0001-force-keyframe-on-long-preintegration.patch  0002-debug-print-estimator-state.patch  0003-static-robustness-and-failure-detection.patch  0003-zero-velocity-update.patch  0004-loop-fusion-ros2-topic-and-qos-fix.patch
ros2_ws_src/seeker1/: CMakeLists.txt  LICENSE  cameraParams.mat  fish_eye_calibration.yml  fisheye_converted_params.mat  package.xml  untitled.m
ros2_ws_src/seeker1/cmake/: ROS2.cmake
ros2_ws_src/seeker1/launch/nodelet/: 2concat_nodelet.launch  3undistort_nodelet.launch
ros2_ws_src/seeker1/script/: kalibr_imucam_chain.yaml
ros2_ws_src/seeker1/src/: seeker_ros2.cpp  seeker_split_node.cpp
scripts/: build_amd64.sh  build_arm64.sh  calib_imu_allan.py  d435i_publisher_ros2.py  deploy.sh  fetch_upstream.sh  gen_d435i_config.py  gen_seeker_config.py  make_replay_config.sh  vins_to_mavros.py
worlds/: vins_warehouse.sdf
