<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>seeker</name>
  <version>0.0.2</version>
  <description>The seeker package</description>
  <maintainer email="1103771026@qq.com">caizepeng</maintainer>
  <license>GPLV3</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <export>
    <build_type >ament_cmake</build_type>
  </export>
</package>
